2007-03-16 Borut Razem <borut.razem AT siol.net>

	* sdcc-build-bootstrap.sh, lib/bootstrap.mk: invoke
	  remove-old-versions only once at the end of all builds after
	  do-upload

2007-03-15 Borut Razem <borut.razem AT siol.net>

	* local/cf-x86.mk, local/cf-x86-i386-unknown-linux2.5.mk: added coment
	  about --hash-style=both
	* sdcc-build-bootstrap.sh: checkout sdcc-build to $BUILDROOT/sdcc-build

2007-03-13 Borut Razem <borut.razem AT siol.net>

	* components/sdcc.mk, components/sdcc-extra.mk: introduced TREGETLDFLAGS
	* local/cf-x86.mk, local/cf-x86-i386-unknown-linux2.5.mk: set TARGETLDFLAGS = -Wl,--hash-style=both
	* local/cf-x86-i586-mingw32msvc.mk: set TARGETLDFLAGS =
	* sdcc-build-bootstrap.sh: change directory to $HOME/build

2007-03-12 Borut Razem <borut.razem AT siol.net>

	* lib/fetch.mk, lib/variables.mk: fetch by the local machine if SVNSERVER
	  is not defined
	* components/sdcc.mk: report CXX settings
	* local/cf-x86-i386-unknown-linux2.5.mk: define HOSTOS=i386-unknown-linux2.5
	  even on 64bit amd64-unknown-linux2.5 host in order to copile 32bit i386
	  binaries

2007-03-09 Borut Razem <borut.razem AT siol.net>

	* components/sdcc-web.mk, lib/bootstrap.mk, lib/doc-archive.mk,
	  lib/src-archive.mk, local/cf-x86.mk, sdcc-build-bootstrap.sh:
	  invoke do-upload only once at the end of all builds;
	  do not configure and run the doc Makefile as a part of cf-x86 build
	  since the documentation is built in a separate step

2007-03-08 Borut Razem <borut.razem AT siol.net>

	* local/cf-x86-i386-unknown-linux2.5.mk: added
	* local/cf-x86.mk: added i386-unknown-linux2.5 build to OTHERTARGETS

2007-03-06 Borut Razem <borut.razem AT siol.net>

	* local/cf-x86-i586-mingw32msvc.mk: the latest version of mingw gcc is
	  installed in $(HOME)/local-$(HOSTNAME); added MAKEJOBFLAGS = -j 2
	* local/cf-x86.mk: cf-x86 is an amd64-unknown-linux2.4 machine

2007-01-25 Bernhard Held <bernhard AT bernhardheld.de>

	* lib/bootstrap.mk,
	* lib/variables.mk,